--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -8,7 +8,7 @@ bind l select-pane -R
 # catpuccin colorscheme
 set -g default-terminal "tmux-256color"
 
-# Configure the catppuccin plugin
+# configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "basic"
 set -g @catppuccin_window_text " #W"
@@ -20,4 +20,3 @@ set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ""
 set -g status-right "%l:%M %p   %b %e, %Y"
-
