update tmux and lsp configs

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -5,6 +5,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind -n M-j previous-window
+bind -n M-k next-window
+
 # catpuccin colorscheme
 set -g default-terminal "tmux-256color"
 
